--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<video autoplay loop id="myVideo">
-  <source src='../assets/trailer.mp4' type="video/mp4">
-</video>
+<router-outlet></router-outlet>
