--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -1,6 +1,6 @@
 nav {
     height: 200px;
-    background-color: red;
+    background-color: #B20061;
     justify-content: center;
     align-content: center;
 }
