--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+// Orange
+// #EDAC07
+// Copy
+// Indigo
+// #34043C
+// Copy
+// Steel Blue
+// #50A0CA
+// Copy
+// Crimson
+// #D01A4A
+// Copy
+// Medium Sea Green
+// #64AB47
