--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -2,7 +2,7 @@
     <source src='../../../assets/trailer.mp4' type="video/mp4">
 </video> -->
 
-
+<img src='../../../assets/pl.png'>
 
 
 <ng-container *ngFor='let p of prop; let i= index'>
