colapse animation added to nav

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,4 +1,7 @@
-<app-nav></app-nav>
-<router-outlet>
+<app-nav [@expandColapse]='scrollHandler()? "expand": "colapse"'></app-nav>
 
+<router-outlet>
 </router-outlet>
+
+
+=
