--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,5 +1,7 @@
-<img src='../../../assets/EPL-Logo.png'>
+<div class="left img">
+    <img src='../../../assets/EPL-Logo.png'>
 
+</div>
 
 
 
@@ -17,6 +19,9 @@
     <h2>
         statistics
     </h2>
+
+
+
 
 </div>
 
