--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,7 +1,8 @@
 <app-nav [@expandColapse]='scrollHandler()? "expand": "colapse"'></app-nav>
 
-<router-outlet>
-</router-outlet>
 
 
-=
+<div class='relative'>
+    <router-outlet>
+    </router-outlet>
+</div>
