--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -1,17 +1,16 @@
 :host  {
-//     display: flex;
+
   height: 400px;  
    background-color: #34043C;
     justify-content: space-between;
-//     // align-content: center;
-//     position: relative;
-//     flex-direction: row;
+
 
     overflow: hidden;
     top: '0';
     z-index:1;
     border-bottom: 1px solid #34043C;
-// }
+    margin-bottom: 10px;
+
 
 
 
