--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -1,14 +1,14 @@
 <!-- <video autoplay loop>
     <source src='../../../assets/trailer.mp4' type="video/mp4">
 </video> -->
-<div>
+<div class='flex-container'>
     <img src='../../../assets/pl.png'>
 
 
-    <ng-container *ngFor='let p of prop; let i= index'>
-        <app-card class="heartbeat" *ngIf=' p' [@slideInLeftOnEnter]="{ value: '', params: { delay: i * 100 } }"
-            [card]='p'>
 
-        </app-card>
-    </ng-container>
 </div>
+<ng-container *ngFor='let p of prop; let i= index'>
+    <app-card class="heartbeat" *ngIf=' p' [@slideInLeftOnEnter]="{ value: '', params: { delay: i * 100 } }" [card]='p'>
+
+    </app-card>
+</ng-container>
