coursor to poiner

--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -53,6 +53,7 @@ margin-left: 10px;
    
     // color: black;
     font-style: Franklin Gothic Medium;
+    cursor: pointer;
 }
 
 .large {
@@ -63,6 +64,7 @@ margin-left: 10px;
     text-align: center;
     // color: #ffffff;
      margin-top: 100px;
+     cursor: none;
   
     
 }
