--- a/src/app/home/home-page/card/card.component.scss
+++ b/src/app/home/home-page/card/card.component.scss
@@ -8,17 +8,11 @@
   
     
 
-       
+        cursor: pointer;
 
   
 
-   p {
-        color: red;
-
-        text-align: center;
-
-        
-    }
+  
     &.heartbeat:hover {
         -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
                 animation: heartbeat 1.5s ease-in-out infinite both;
