--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -19,7 +19,9 @@
     <h2>
         statistics
     </h2>
-
+    <h4>
+        app
+    </h4>
 
 
 
@@ -33,8 +35,10 @@
         home
     </div>
     <div class='route'>
-        standings
+        table
     </div>
-
+    <div class='route'>
+        stats
+    </div>
 
 </div>
