table-page: aded route and route to nav

--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -31,10 +31,10 @@
 
 
 <div class='navigation right'>
-    <div class='route'>
+    <div class='route' [routerLink]="['/home']">
         home
     </div>
-    <div class='route'>
+    <div class='route' [routerLink]="['/table']">
         table
     </div>
     <div class='route'>
