--- a/src/app/table/table-page/table-page.component.scss
+++ b/src/app/table/table-page/table-page.component.scss
@@ -3,11 +3,8 @@
     width: 100%;
     height: 100%;
     margin: auto;
-    background-color: #FAACA8;
-    background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
    
-
-
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
 
 
@@ -30,12 +27,12 @@ th, td, tr {
     border-bottom:  1px solid white;
   }
 
-tr[scope=row]:hover{
-      background-color: #D01A4A;
-      opacity: 0.2;
-      color: black;
+// tr[scope=row]:hover{
+//       background-color: #D01A4A;
+//       opacity: 0.2;
+//       color: black;
 
-  }
+//   }
 
  .champions_league {
     color:#64AB47
