--- a/src/app/table/table-page/table-page.component.html
+++ b/src/app/table/table-page/table-page.component.html
@@ -57,7 +57,7 @@
 
 <table class="table  table-striped table-hover">
     <thead class=" thead-dark ">
-        <th scope=" col">R</th>
+        <th scope=" col" (click)='reverseStandings()'>R</th>
         <th scope="col">Team</th>
         <th scope="col">P</th>
         <th scope="col">W</th>
