--- a/src/app/table/table-page/table-page.component.html
+++ b/src/app/table/table-page/table-page.component.html
@@ -57,7 +57,7 @@
 
 <table class="table  table-striped table-hover">
     <thead class=" thead-dark ">
-        <th scope=" col" (click)='reverseStandings()' [ngClass]="{selected: selected === 'r'}">R</th>
+        <th scope="col" (click)='reverseStandings()' [ngClass]="{selected: selected === 'r'}">R</th>
         <th scope="col" (click)='sortByName()' [ngClass]="{selected: selected === 'team'}">Team</th>
         <th scope="col" (click)='sortByMostPlayed()' [ngClass]="{selected: selected === 'p'}">P</th>
         <th scope="col" (click)='sortByMostWins()' [ngClass]="{selected: selected === 'w'}">W</th>
@@ -66,7 +66,7 @@
         <th scope="col" (click)='sortByGoalsFor()' [ngClass]="{selected: selected === 'gf'}">GF</th>
         <th scope="col" (click)='sortByGoalsAlowed()' [ngClass]="{selected: selected === 'ga'}">GA</th>
 
-        <th scope="col" (click)='sortByPts()'>Pts</th>
+        <th scope="col" (click)='sortByPts()' [ngClass]="{selected: selected === 'pts'}">Pts</th>
 
     </thead>
     <tbody>
