legend added and styled

--- a/src/app/table/table-page/table-page.component.html
+++ b/src/app/table/table-page/table-page.component.html
@@ -105,3 +105,28 @@
 
     </tbody>
 </table>
+
+
+<div class="legend">
+
+    <ul>
+        <li>
+            <span scope='champions-league'></span>
+            champions league
+        </li>
+        <li>
+            <span scope='europa-league'>
+            </span>
+            europa league
+        </li>
+        <li>
+            <span scope='relegations'>
+
+            </span>
+            relegation
+        </li>
+
+    </ul>
+
+
+</div>
