fixtures table styled

--- a/src/app/table/table-page/table-page.component.html
+++ b/src/app/table/table-page/table-page.component.html
@@ -122,7 +122,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
@@ -154,7 +154,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
@@ -189,7 +189,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
@@ -222,7 +222,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
@@ -257,7 +257,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
@@ -292,7 +292,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
@@ -326,7 +326,7 @@ wednesdayFixures: Fixture[]
 
         <thead>
             <tr>
-                <th scope="col">
+                <th scope="col" class='column'>
                     #
                 </th>
                 <th scope="col">
