--- a/src/app/table/table-page/table-page.component.scss
+++ b/src/app/table/table-page/table-page.component.scss
@@ -8,7 +8,8 @@
 }
 
 
-table {
+table ,app-fixtures-table {
+
     width: 80%;
     margin: auto;
     
@@ -113,3 +114,6 @@ tr {
 .column {
     width: 100px;
 }
+
+
+
