--- a/src/app/table/table-page/fixtures-table/fixtures-table.component.html
+++ b/src/app/table/table-page/fixtures-table/fixtures-table.component.html
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr scope="row" *ngFor='let fixture of fixtures'>
+        <tr scope="row" *ngFor='let fixture of fixtures' [routerLink]="['/match/statistic/',fixture.match_id]">
             <th>{{fixture.match_time}}</th>
 
             <td>
