--- a/src/app/match/mach-page/mach-page.component.html
+++ b/src/app/match/mach-page/mach-page.component.html
@@ -3,3 +3,16 @@
 <div class='ball-possession'>
 
 </div>
+<ngx-charts-bar-horizontal-stacked [xAxisTickFormatting]="format" [schemeType]="'ordinal'" [view]="view"
+    [trimXAxisTicks]="showYAxis" [scheme]="colorScheme" [results]="statistics" [xAxis]="true" [yAxis]="showYAxis"
+    [legend]="showLegend" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" (select)="onSelect($event)">
+
+    <ng-template #tooltipTemplate let-model="model">
+        <div class='toolText'>
+            <h6>
+                {{ model.statType}}&bull;{{model.name}}
+            </h6>
+            <h6>{{model.normalValue}}</h6>
+        </div>
+    </ng-template>
+</ngx-charts-bar-horizontal-stacked>
